carousal fix and remove white space

--- a/index.css
+++ b/index.css
@@ -1,5 +1,19 @@
 .section-heading {
 	margin-left: 30px;
 }
-
-
+#myCarousel{
+	margin-top: 20px;
+	/*max-height: 500px;*/
+}
+.carousel-inner > .item {
+	height: 100%;
+	max-height: 550px;
+	width: 100%;
+}
+.intro-text{
+	padding: 0;
+	padding-top: 30px;
+}
+#services{
+	padding-top: 0;
+}
